tests/kulezi_tests/bad/invalid_return04.lat
class C {
    bool x;
    C main()  {
        return self.x;
    }
}


int main() {
    return 0;
}